--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,20 @@
 @import "./base/variables";
+@import "./base/mixins";
 @import "./base/fonts";
+@import "./libs/bootstrap-reboot.min";
+
+@import "./blocks/promo";
+@import "./blocks/title";
+@import "./blocks/button";
+@import "./blocks/sidepanel";
 
 * {
   font-family: Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
 }
