--- a/src/pug/chunks/promo.pug
+++ b/src/pug/chunks/promo.pug
@@ -1,4 +1,8 @@
 section.promo 
+  .burger 
+    span 
+    span 
+    span 
   .container 
     .promo__name.title.title_fz16 Меня зовут Александра Смит
     h1.promo__title.title.title_fz48 Я web-разработчик из города Москва
