--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -2,6 +2,7 @@
   min-height: 800px;
   padding-top: 206px;
   background: url("../img/Background.jpg") center (center/cover) no-repeat;
+  position: relative;
 
   &__name {
     padding-left: 10px;
