--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "./blocks/title";
 @import "./blocks/button";
 @import "./blocks/sidepanel";
+@import "./blocks/burger";
 
 * {
   font-family: Poppins, sans-serif;
