added side menu

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,5 +4,6 @@ block variables
   - var title = 'Index'
 
 block content 
+  include chunks/menu.pug
   include chunks/sidepanel
   include chunks/promo.pug
