--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./blocks/button";
 @import "./blocks/sidepanel";
 @import "./blocks/burger";
+@import "./blocks/menu";
 
 * {
   font-family: Poppins, sans-serif;
