added about section

--- a/src/scss/blocks/_title.scss
+++ b/src/scss/blocks/_title.scss
@@ -11,6 +11,11 @@
     line-height: 24px;
   }
 
+  &_fz36 {
+    font-size: 36px;
+    line-height: 60px;
+  }
+
   &_fz48 {
     font-size: 48px;
     line-height: 60px;
