--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,10 +5,12 @@
 
 @import "./blocks/promo";
 @import "./blocks/title";
+@import "./blocks/description";
 @import "./blocks/button";
 @import "./blocks/sidepanel";
 @import "./blocks/burger";
 @import "./blocks/menu";
+@import "./blocks/about";
 
 * {
   font-family: Poppins, sans-serif;
