refactored pug files

--- a/src/pug/chunks/about.pug
+++ b/src/pug/chunks/about.pug
@@ -1,28 +1,27 @@
+- const loremText = "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et veritatis magni optio fugit eveniet inventore eligendi, totam saepe aliquid, blanditiis dignissimos ullam quo. Accusantium eos suscipit saepe vero totam ea."
+- const smallLoremText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";
+- 
+  const itemList = [
+    {name: "web", title: "Web-разработка", src: "img/about/web.svg"},
+    {name: "mobile", title: "Разработка приложений", src: "img/about/mobile.svg"},
+    {name: "design", title: "UI/UX Design", src: "img/about/design.svg"}
+  ];
+
 section.about 
   .container 
     .about__grid 
-      img.about__img(src="img/Photo.jpg" alt="photo")
+      .about__img 
+        img.about__img(src="img/Photo.jpg" alt="photo")
       .about__info 
         .about__title.title.title_fz14 Про меня
         h2.about__subtitle.title.title_fz36 Меня зовут Александра
         .about__divider 
-        .about__descr.descr Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quidem esse vel labore odio deserunt nobis praesentium atque? Deserunt perferendis voluptatibus suscipit tempora ratione iure libero adipisci numquam ea earum!
+        .about__descr.descr #{loremText}
         ul.about__list 
-          li.about__item
-            .about__icon 
-              img(src="img/about/web.svg" alt="web")
-            .about__wrapper
-              .about__header.title.title_fz14 Web-разработка
-              .about__descr.descr.descr_fz12 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          li.about__item
-            .about__icon 
-              img(src="img/about/mobile.svg" alt="mobile")
-            .about__wrapper
-              .about__header.title.title_fz14 Разработка приложений
-              .about__descr.descr.descr_fz12 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          li.about__item
-            .about__icon 
-              img(src="img/about/design.svg" alt="design")
-            .about__wrapper
-              .about__header.title.title_fz14 UI/UX Design
-              .about__descr.descr.descr_fz12 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          each item in itemList
+            li.about__item
+              .about__icon 
+                img(src= item.src alt= item.name)
+              .about__wrapper
+                .about__header.title.title_fz14 #{item.title}
+                .about__descr.descr.descr_fz12 #{smallLoremText}
