--- a/src/pug/chunks/menu.pug
+++ b/src/pug/chunks/menu.pug
@@ -1,3 +1,10 @@
+-
+ const socialItems = [
+  {name: "github", link: "#", path: "img/social/Github.svg"},
+  {name: "instagram", link: "#", path: "img/social/Instagram.svg"},
+  {name: "facebook", link: "#", path: "img/social/Facebook.svg"}
+ ];
+
 .menu 
   .menu__block 
     img.menu__close(src="img/Close.svg" alt="close")
@@ -7,7 +14,7 @@
           li.menu__item 
             a.menu__link(href="#")= name
     .menu__social 
-      each item in [{name: "github", link: '#', path: "img/social/Github.svg"}, {name: "instagram", link: '#', path: "img/social/Instagram.svg"}, {name: "facebook", link: '#', path: "img/social/Facebook.svg"}]
+      each item in socialItems
         a(href= item.link)
           img(src= item.path, alt= item.name)
   .menu__overlay
