--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -8,6 +8,12 @@
     column-gap: 70px;
   }
 
+  &__img {
+    img {
+      width: 100%;
+    }
+  }
+
   &__title {
     position: relative;
     padding-left: 12px;
