added exp section

--- a/src/pug/chunks/about.pug
+++ b/src/pug/chunks/about.pug
@@ -15,7 +15,7 @@ section.about
       .about__info 
         .about__title.title.title_fz14 Про меня
         h2.about__subtitle.title.title_fz36 Меня зовут Александра
-        .about__divider 
+        .about__divider.divider
         .about__descr.descr #{loremText}
         ul.about__list 
           each item in itemList
