--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/burger";
 @import "./blocks/menu";
 @import "./blocks/about";
+@import "./blocks/exp";
 
 * {
   font-family: Poppins, sans-serif;
@@ -21,4 +22,10 @@
 .container {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+.divider {
+  width: 60px;
+  height: 0px;
+  border: 2px solid $main-color;
 }
