added part of skills section

--- a/src/pug/chunks/about.pug
+++ b/src/pug/chunks/about.pug
@@ -7,7 +7,7 @@
     {name: "design", title: "UI/UX Design", src: "img/about/design.svg"}
   ];
 
-section.about 
+section.about(id="about")
   .container 
     .about__grid 
       .about__img 
