--- a/src/pug/chunks/exp.pug
+++ b/src/pug/chunks/exp.pug
@@ -41,7 +41,7 @@
     }
   ]
 
-section.exp 
+section.exp(id="exp")
   .container 
     h2.exp__title.title.title_fz16 Опыт
     .exp__subtitle.title.title_fz36 Чем я буду полезна
