--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./blocks/menu";
 @import "./blocks/about";
 @import "./blocks/exp";
+@import "./blocks/skills";
 
 * {
   font-family: Poppins, sans-serif;
