--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./blocks/about";
 @import "./blocks/exp";
 @import "./blocks/skills";
+@import "./blocks/rating";
 
 * {
   font-family: Poppins, sans-serif;
