--- a/src/pug/chunks/exp.pug
+++ b/src/pug/chunks/exp.pug
@@ -43,8 +43,8 @@
 
 section.exp(id="exp")
   .container 
-    h2.exp__title.title.title_fz16 Опыт
-    .exp__subtitle.title.title_fz36 Чем я буду полезна
+    h2.exp__title.title.title_fz16.title_section Опыт
+    .exp__subtitle.title.title_fz36.title_subtitle Чем я буду полезна
     .exp__divider.divider 
     .exp__grid 
       each item in expItemList
