--- a/src/pug/chunks/skills.pug
+++ b/src/pug/chunks/skills.pug
@@ -49,8 +49,8 @@
 
 section.skills(id="skills") 
   .container
-    h2.skills__title.title.title_fz16 Навыки
-    .skills__subtitle.title.title_fz36 Что я использую в работе
+    h2.skills__title.title.title_fz16.title_section Навыки
+    .skills__subtitle.title.title_fz36.title_subtitle Что я использую в работе
     .skills__divider.divider 
     ul.skills__list 
       each item in skillItems
