--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./blocks/exp";
 @import "./blocks/skills";
 @import "./blocks/rating";
+@import "./blocks/work";
 
 * {
   font-family: Poppins, sans-serif;
@@ -27,7 +28,13 @@
 }
 
 .divider {
+  margin: 0 auto;
+  margin-top: 25px;
   width: 60px;
   height: 0px;
   border: 2px solid $main-color;
+
+  &_left {
+    margin: 0;
+  }
 }
