--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./blocks/skills";
 @import "./blocks/rating";
 @import "./blocks/work";
+@import "./blocks/price";
 
 * {
   font-family: Poppins, sans-serif;
