added contacts and privacy

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,7 @@
 extends shared/layout.pug
 
 block variables
-  - var title = 'Index'
+  - var title = 'Alexandra'
 
 block content 
   include chunks/menu.pug
@@ -12,3 +12,4 @@ block content
   include chunks/skills.pug
   include chunks/work.pug
   include chunks/price.pug
+  include chunks/contacts.pug
