--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/rating";
 @import "./blocks/work";
 @import "./blocks/price";
+@import "./blocks/contacts";
 
 * {
   font-family: Poppins, sans-serif;
