--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,5 +1,5 @@
 .promo {
-  min-height: 800px;
+  min-height: 100vh;
   padding-top: 206px;
   background: url("../img/Background.jpg") center (center/cover) no-repeat;
   position: relative;
@@ -14,6 +14,12 @@
   &__title {
     margin-top: 9px;
     width: 532px;
+
+    @media (max-width: $mb3) {
+      font-size: 26px;
+      line-height: 39px;
+      width: 300px;
+    }
   }
 
   &__links {
@@ -29,8 +35,10 @@
     text-decoration: none;
     color: #000000;
 
-    &:hover {
-      color: #000000;
+    @media (max-width: $mb0) {
+      &:hover {
+        color: #000000;
+      }
     }
 
     &:nth-child(1) {
