--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,9 +7,9 @@ block content
   include chunks/menu.pug
   include chunks/sidepanel
   include chunks/promo.pug
-  include chunks/about.pug
-  include chunks/exp.pug
-  include chunks/skills.pug
-  include chunks/work.pug
-  include chunks/price.pug
-  include chunks/contacts.pug
+  //- include chunks/about.pug
+  //- include chunks/exp.pug
+  //- include chunks/skills.pug
+  //- include chunks/work.pug
+  //- include chunks/price.pug
+  //- include chunks/contacts.pug
