added media for about section

--- a/src/pug/chunks/about.pug
+++ b/src/pug/chunks/about.pug
@@ -1,4 +1,4 @@
-- const loremText = "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et veritatis magni optio fugit eveniet inventore eligendi, totam saepe aliquid, blanditiis dignissimos ullam quo. Accusantium eos suscipit saepe vero totam ea."
+- const loremText = "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et veritatis magni optio fugit eveniet inventore eligendi, totam saepe aliquid, blanditiis dignissimos ullam quo. Accusantium eos suscipit saepe vero totam ea. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et veritatis magni optio fugit eveniet inventore eligendi, totam saepe aliquid, blanditiis dignissimos ullam quo. Accusantium eos suscipit saepe vero totam ea."
 - const smallLoremText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";
 - 
   const itemList = [
