--- a/src/scss/blocks/_sidepanel.scss
+++ b/src/scss/blocks/_sidepanel.scss
@@ -9,7 +9,7 @@
   transform: rotate(-90deg);
   z-index: 1;
 
-  @media(max-width: $mb0) {
+  @media(max-width: 1320px) {
     display: none;
   }
 
