--- a/src/scss/blocks/_title.scss
+++ b/src/scss/blocks/_title.scss
@@ -24,6 +24,11 @@
   &_fz36 {
     font-size: 36px;
     line-height: 60px;
+
+    @media (max-width: $mb1) {
+      font-size: 24px;
+      line-height: 36px;
+    }
   }
 
   &_fz48 {
@@ -46,5 +51,5 @@
 
   &_subtitle {
     text-align: center;
-  }                 
+  }
 }
