--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
   min-height: 100vh;
   padding-top: 206px;
-  background: url("../img/Background.jpg") center (center/cover) no-repeat;
+  background: url("../img/Background.jpg") (57% / cover) no-repeat;
   position: relative;
 
   &__name {
@@ -26,6 +26,10 @@
     margin-top: 25px;
     display: flex;
     align-items: center;
+
+    @media(max-width: $mb3) {
+      margin-top: 32px;
+    }
   }
 
   &__link {
