added media for exp section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ block content
   include chunks/sidepanel
   include chunks/promo.pug
   include chunks/about.pug
-  //- include chunks/exp.pug
+  include chunks/exp.pug
   //- include chunks/skills.pug
   //- include chunks/work.pug
   //- include chunks/price.pug
