--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,7 +9,7 @@ block content
   include chunks/promo.pug
   include chunks/about.pug
   include chunks/exp.pug
-  //- include chunks/skills.pug
+  include chunks/skills.pug
   //- include chunks/work.pug
   //- include chunks/price.pug
   //- include chunks/contacts.pug
