--- a/src/scss/blocks/_rating.scss
+++ b/src/scss/blocks/_rating.scss
@@ -1,17 +1,33 @@
 .rating {
   margin-top: 120px;
   display: grid;
-  grid-template-columns: repeat(3, 350px);
-  gap: 45px 30px;
+  grid-template-columns: repeat(3, minmax(200px, 350px));
+  gap: 40px 30px;
+  justify-content: space-between;
+
+  @media(max-width: $mb2) {
+    margin-top: 40px;
+    grid-template-columns: 100%;
+    justify-content: center;
+  }
 
   &__wrapper {
-    max-width: 350px;
     display: grid;
     grid-template-columns: repeat(2, auto);
+    row-gap: 26px;
     align-items: center;
+  }
+  
+  &__title {
+    position: relative;
+    padding-left: 12px;
+    margin-top: 6px;
+    padding-top: 2px;
+    @include before-circle;
   }
 
   &__rate {
+    padding-top: 6px;
     justify-self: end;
   }
 
@@ -19,7 +35,6 @@
     position: relative;
     width: 100%;
     grid-column: 1 / 3;
-    margin-top: 27px;
   }
 
   &__empty,
