--- a/src/scss/blocks/_skills.scss
+++ b/src/scss/blocks/_skills.scss
@@ -2,6 +2,20 @@
   margin-top: 120px;
   min-height: 1024px;
 
+  @media (max-width: $mb2) {
+    margin-top: 40px;
+  }
+
+  &__divider {
+    @media (max-width: $mb2) {
+      margin-top: 15px;
+    }
+  }
+
+  &__subtitle {
+    margin-top: 20px;
+  }
+
   &__list {
     list-style: none;
     margin: 0;
@@ -10,6 +24,16 @@
     display: grid;
     grid-template-columns: repeat(4, 270px);
     gap: 13px 13px;
+
+    @media (max-width: $mb0) {
+      grid-template-columns: repeat(auto-fill, 270px);
+      justify-content: center;
+    }
+
+    @media (max-width: $mb2) {
+      margin-top: 20px;
+      column-gap: 20px;
+    }
   }
 
   &__item {
