--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,6 +10,6 @@ block content
   include chunks/about.pug
   include chunks/exp.pug
   include chunks/skills.pug
-  //- include chunks/work.pug
+  include chunks/work.pug
   //- include chunks/price.pug
   //- include chunks/contacts.pug
