--- a/src/scss/blocks/_work.scss
+++ b/src/scss/blocks/_work.scss
@@ -1,25 +1,55 @@
 .work {
   margin-top: 126px;
 
+  @media (max-width: $mb0) {
+    margin-top: 40px;
+
+    &__subtitle {
+      margin-top: 26px;
+    }
+
+    &__divider {
+      margin-top: 15px;
+    }
+  }
+
   &__grid {
     margin-top: 60px;
     display: grid;
-    grid-template-columns: repeat(4, 280px);
-    grid-template-rows: repeat(2, 280px);
+    grid-template: repeat(2, 280px) / repeat(4, 280px);
     grid-auto-rows: 280px;
     gap: 5px;
+
+    @media (max-width: $mb0) {
+      margin-top: 40px;
+      grid-template-columns: repeat(auto-fit, 280px);
+      grid-auto-rows: 280px;
+      justify-content: center;
+      gap: 20px;
+    }
   }
 
   &__item {
-    transition: .5s all;
+    transition: 0.5s all;
 
     &:nth-child(4) {
-      grid-column: 4;
       grid-row: 1 / 3;
+      grid-column: 4 / 5;
+
+      @media (max-width: $mb0) {
+        grid-row: unset;
+        grid-column: unset;
+      }
     }
 
     &:nth-child(6) {
+      grid-row: 2 / 3;
       grid-column: 2 / 4;
+
+      @media (max-width: $mb0) {
+        grid-row: unset;
+        grid-column: unset;
+      }
     }
 
     &:hover {
@@ -31,6 +61,7 @@
   &__link {
     img {
       width: 100%;
+      height: 100%;
     }
   }
 }
