--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,5 +11,5 @@ block content
   include chunks/exp.pug
   include chunks/skills.pug
   include chunks/work.pug
-  //- include chunks/price.pug
+  include chunks/price.pug
   //- include chunks/contacts.pug
