--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,4 +12,4 @@ block content
   include chunks/skills.pug
   include chunks/work.pug
   include chunks/price.pug
-  //- include chunks/contacts.pug
+  include chunks/contacts.pug
