--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -3,10 +3,46 @@
   margin-bottom: 92px;
   min-height: 600px;
 
+  @media (max-width: $mb1) {
+    margin-top: 40px;
+    grid-template-columns: 1fr;
+    column-gap: unset;
+    justify-content: center;
+  }
+
+  @media (max-width: $mb2) {
+    margin-top: 46px;
+  }
+
   &__grid {
     display: grid;
-    grid-template-columns: 400px 585px;
+    grid-template-columns: 400px auto;
     column-gap: 68px;
+
+    @media (max-width: $mb0) {
+      grid-template-columns: 350px auto;
+      column-gap: 30px;
+    }
+
+    @media (max-width: $mb1) {
+      grid-template-columns: 300px 400px;
+    }
+
+    @media (max-width: $mb2) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &__img {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media (max-width: $mb2) {
+      display: none;
+    }
   }
 
   &__title {
@@ -17,6 +53,18 @@
 
     &::before {
       top: 0;
+    }
+  }
+
+  &__subtitle {
+    @media (max-width: $mb2) {
+      margin-top: 20px;
+    }
+  }
+
+  &__divider {
+    @media (max-width: $mb2) {
+      margin-top: 15px;
     }
   }
 
@@ -41,8 +89,20 @@
   &__form {
     display: grid;
     grid-template: 45px 190px 45px / repeat(2, 280px);
-    justify-content: space-between;
+    column-gap: 25px;
     row-gap: 33px;
+
+    @media (max-width: $mb1) {
+      grid-template: 45px 190px 48px / repeat(2, auto);
+    }
+
+    @media (max-width: $mb2) {
+      grid-template: 45px 190px 45px / repeat(2, auto);
+    }
+
+    @media (max-width: $mb3) {
+      grid-template: 45px 45px 190px minmax(45px, auto) / 1fr;
+    }
   }
 
   &__input {
@@ -65,6 +125,11 @@
       resize: none;
       padding: 20px;
     }
+
+    @media (max-width: $mb3) {
+      grid-column: unset;
+      width: 100%;
+    }
   }
 
   &__label {
@@ -86,6 +151,17 @@
     grid-template-columns: repeat(2, auto);
     align-items: center;
     column-gap: 35px;
+
+    @media (max-width: $mb2) {
+      column-gap: 15px;
+    }
+
+    @media (max-width: $mb3) {
+      grid-column: unset;
+      grid-template-columns: 1fr;
+      column-gap: unset;
+      row-gap: 20px;
+    }
   }
 
   &__policy {
@@ -98,9 +174,33 @@
       font-size: 12px;
       line-height: 19px;
     }
+
+    @media (max-width: $mb3) {
+      width: 180px;
+      margin: 0 auto;
+      line-height: 18px;
+
+      input {
+        transform: scale(1.5);
+      }
+    }
   }
 
   &__btn {
     border: none;
+
+    @media (max-width: $mb1) {
+      line-height: 16px;
+    }
+
+    @media (max-width: $mb2) {
+      height: 100%;
+    }
+
+    @media (max-width: $mb3) {
+      order: 2;
+      max-width: 220px;
+      margin: 0 auto;
+    }
   }
 }
